make it sexy :rage2:

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "gulp-stylus": "~2.0.2",
     "rimraf": "~2.3.4",
     "autoprefixer-stylus": "~0.6.0",
-    "run-sequence": "~1.1.0",
-    "hogan.js": "~3.0.2",
+    "run-sequence": "~1.1.0",,
     "jquery": "~1.11.3",
     "handlebars": "~3.0.3",
     "gulp-handlebars": "~4.0.0",
