--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-stylus": "~2.0.2",
     "rimraf": "~2.3.4",
     "autoprefixer-stylus": "~0.6.0",
-    "run-sequence": "~1.1.0",,
+    "run-sequence": "~1.1.0",
     "jquery": "~1.11.3",
     "handlebars": "~3.0.3",
     "gulp-handlebars": "~4.0.0",
@@ -31,6 +31,7 @@
     "gulp-concat": "~2.5.2",
     "gulp-strip-debug": "~1.0.2",
     "gulp-uglify": "~1.2.0",
-    "gulp-jsdoc": "~0.1.4"
+    "gulp-jsdoc": "~0.1.4",
+    "q": "~1.4.1"
   }
 }
