--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-strip-debug": "~1.0.2",
     "gulp-uglify": "~1.2.0",
     "gulp-jsdoc": "~0.1.4",
-    "q": "~1.4.1"
+    "q": "~1.4.1",
+    "merge-stream": "~0.1.7"
   }
 }
